Better dockerfile, upgrade to Java 25 and build libvips using jemalloc